- Fixed bug #48038 (odbc_execute changes variables used to form params array)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@279649 c90b9560-bf6c-de11-be94-00142212c4b1